--- a/package.json
+++ b/package.json
@@ -23,6 +23,12 @@
     "@ember/optional-features": "^1.3.0",
     "@glimmer/component": "^1.0.0",
     "@glimmer/tracking": "^1.0.0",
+    "@types/ember": "^3.1.2",
+    "@types/ember-data": "^3.1.11",
+    "@types/ember-qunit": "^3.4.8",
+    "@types/ember__test-helpers": "^0.7.12",
+    "@types/qunit": "^2.9.1",
+    "@types/rsvp": "^4.0.3",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "ember-auto-import": "^1.5.3",
@@ -33,6 +39,8 @@
     "ember-cli-htmlbars": "^4.3.1",
     "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-sri": "^2.1.1",
+    "ember-cli-typescript": "^3.1.4",
+    "ember-cli-typescript-blueprints": "^3.0.0",
     "ember-cli-uglify": "^3.0.0",
     "ember-data": "~3.18.0",
     "ember-export-application-global": "^2.0.1",
@@ -48,7 +56,8 @@
     "eslint-plugin-node": "^11.1.0",
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
-    "qunit-dom": "^1.2.0"
+    "qunit-dom": "^1.2.0",
+    "typescript": "^3.9.5"
   },
   "engines": {
     "node": "10.* || >= 12"
