--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@glimmer/tracking": "^1.0.0",
     "@types/ember": "^3.1.2",
     "@types/ember-data": "^3.1.11",
+    "@types/ember-data__model": "^3.15.0",
+    "@types/ember-data__store": "^3.15.1",
     "@types/ember-qunit": "^3.4.8",
     "@types/ember__test-helpers": "^0.7.12",
     "@types/qunit": "^2.9.1",
