--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
     "qunit-dom": "^1.2.0",
+    "tracked-toolbox": "^1.0.1",
     "typescript": "^3.9.5"
   },
   "engines": {
