--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "ember-qunit": "^4.6.0",
     "ember-resolver": "^8.0.0",
     "ember-source": "~3.18.0",
-    "ember-statecharts": "^0.10.0-beta.1",
+    "ember-statecharts": "^0.10.0",
     "ember-template-lint": "^2.6.0",
     "eslint": "^6.8.0",
     "eslint-plugin-ember": "^8.4.0",
