--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:ember": "ember test"
   },
   "devDependencies": {
+    "@appuniversum/ember-appuniversum": "0.0.24",
     "@ember/optional-features": "^1.3.0",
     "@glimmer/component": "^1.0.0",
     "@glimmer/tracking": "^1.0.0",
@@ -40,6 +41,7 @@
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-htmlbars": "^4.3.1",
     "ember-cli-inject-live-reload": "^2.0.2",
+    "ember-cli-sass": "^10.0.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-typescript": "^3.1.4",
     "ember-cli-uglify": "^3.0.0",
@@ -59,6 +61,7 @@
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
     "qunit-dom": "^1.2.0",
+    "sass": "^1.26.10",
     "tracked-toolbox": "^1.0.1",
     "typescript": "^3.9.5"
   },
