--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@zestia/ember-auto-focus": "^4.1.0",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
+    "ember-a11y-refocus": "^1.0.0",
     "ember-auto-import": "^1.5.3",
     "ember-cli": "~3.18.0",
     "ember-cli-app-version": "^3.2.0",
@@ -48,7 +49,6 @@
     "ember-cli-sri": "^2.1.1",
     "ember-cli-typescript": "^3.1.4",
     "ember-cli-uglify": "^3.0.0",
-    "ember-a11y-refocus": "^1.0.0",
     "ember-data": "~3.18.0",
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.0.1",
@@ -66,9 +66,9 @@
     "npm-run-all": "^4.1.5",
     "qunit-dom": "^1.2.0",
     "sass": "^1.26.10",
+    "svg-symbols": "^1.0.5",
     "tracked-toolbox": "^1.0.1",
-    "typescript": "^3.9.5",
-    "svg-symbols": "^1.0.5"
+    "typescript": "^3.9.5"
   },
   "engines": {
     "node": "10.* || >= 12"
