--- a/package.json
+++ b/package.json
@@ -43,6 +43,12 @@
     "ember-cli-autoprefixer": "^1.0.0",
     "ember-cli-babel": "^7.19.0",
     "ember-cli-dependency-checker": "^3.2.0",
+    "ember-cli-deploy": "^1.0.2",
+    "ember-cli-deploy-build": "^2.0.0",
+    "ember-cli-deploy-display-revisions": "^2.0.0",
+    "ember-cli-deploy-revision-data": "^1.0.0",
+    "ember-cli-deploy-rsync": "0.0.5",
+    "ember-cli-deploy-ssh-index": "^1.0.0",
     "ember-cli-htmlbars": "^4.3.1",
     "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-release": "^1.0.0-beta.2",
