--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "ember-a11y-refocus": "^1.0.0",
+    "ember-async-await-helper": "^0.2.0",
     "ember-auto-import": "^1.5.3",
     "ember-cli": "~3.18.0",
     "ember-cli-app-version": "^3.2.0",
