Basic support for ACM/IDM
Pair programming with @erikap to land basic ACM/IDM support.

This commit includes shifting to a dumber frontend build system which
matches the new dispatcher and bumping the Ember version we build
from.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ember/render-modifiers": "^1.0.2",
     "@glimmer/component": "^1.0.0",
     "@glimmer/tracking": "^1.0.0",
+    "@lblod/ember-acmidm-login": "^1.1.1",
     "@types/ember": "^3.1.2",
     "@types/ember-data": "^3.1.11",
     "@types/ember-data__model": "^3.15.0",
