--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "qunit-dom": "^1.2.0",
     "sass": "^1.26.10",
     "svg-symbols": "^1.0.5",
+    "tracked-built-ins": "^1.0.2",
     "tracked-toolbox": "^1.0.1",
     "typescript": "^3.9.5"
   },
