--- a/package.json
+++ b/package.json
@@ -51,13 +51,13 @@
     "ember-cli-deploy-revision-data": "^1.0.0",
     "ember-cli-deploy-rsync": "0.0.5",
     "ember-cli-deploy-ssh-index": "^1.0.0",
-    "ember-cli-htmlbars": "^4.3.1",
+    "ember-cli-htmlbars": "4.3.0",
     "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-release": "^1.0.0-beta.2",
     "ember-cli-sass": "^10.0.1",
     "ember-cli-sri": "^2.1.1",
+    "ember-cli-terser": "^4.0.1",
     "ember-cli-typescript": "^3.1.4",
-    "ember-cli-uglify": "^3.0.0",
     "ember-concurrency": "^1.2.1",
     "ember-data": "~3.18.0",
     "ember-data-change-tracker": "^0.10.1",
