--- a/package.json
+++ b/package.json
@@ -12,26 +12,30 @@
   },
   "scripts": {
     "build": "ember build --environment=production",
-    "lint": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*",
+    "lint": "npm-run-all --aggregate-output --continue-on-error --parallel 'lint:!(fix)'",
+    "lint:fix": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*:fix",
     "lint:hbs": "ember-template-lint .",
-    "lint:js": "eslint .",
+    "lint:hbs:fix": "ember-template-lint . --fix",
+    "lint:js": "eslint . --cache",
+    "lint:js:fix": "eslint . --fix",
     "start": "ember serve",
-    "test": "npm-run-all lint:* test:*",
+    "test": "npm-run-all lint test:*",
     "test:ember": "ember test",
     "icons": "svg-symbols ./public/icons > ./public/appuniversum-symbolset.svg"
   },
   "devDependencies": {
-    "@ember/optional-features": "^1.3.0",
+    "@ember/optional-features": "^2.0.0",
     "@ember/render-modifiers": "^1.0.2",
-    "@glimmer/component": "^1.0.0",
-    "@glimmer/tracking": "^1.0.0",
+    "@ember/test-helpers": "^2.1.4",
+    "@glimmer/component": "^1.0.3",
+    "@glimmer/tracking": "^1.0.3",
     "@lblod/ember-acmidm-login": "^1.1.1",
-    "@types/ember": "^3.1.2",
-    "@types/ember-data": "^3.1.11",
-    "@types/ember-data__model": "^3.15.0",
-    "@types/ember-data__store": "^3.15.1",
-    "@types/ember-qunit": "^3.4.8",
-    "@types/ember__test-helpers": "^0.7.12",
+    "@types/ember": "^3.16.4",
+    "@types/ember-data": "^3.16.12",
+    "@types/ember-data__model": "^3.16.2",
+    "@types/ember-data__store": "^3.16.1",
+    "@types/ember-qunit": "^3.4.13",
+    "@types/ember__test-helpers": "^1.7.3",
     "@types/qunit": "^2.9.1",
     "@types/rsvp": "^4.0.3",
     "@zestia/ember-auto-focus": "^4.1.0",
@@ -39,11 +43,11 @@
     "broccoli-asset-rev": "^3.0.0",
     "ember-a11y-refocus": "^1.0.0",
     "ember-async-await-helper": "^0.2.0",
-    "ember-auto-import": "^1.5.3",
-    "ember-cli": "~3.18.0",
-    "ember-cli-app-version": "^3.2.0",
+    "ember-auto-import": "^1.10.1",
+    "ember-cli": "~3.24.0",
+    "ember-cli-app-version": "^4.0.0",
     "ember-cli-autoprefixer": "^1.0.0",
-    "ember-cli-babel": "^7.19.0",
+    "ember-cli-babel": "^7.23.0",
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-deploy": "^1.0.2",
     "ember-cli-deploy-build": "^2.0.0",
@@ -51,36 +55,41 @@
     "ember-cli-deploy-revision-data": "^1.0.0",
     "ember-cli-deploy-rsync": "0.0.5",
     "ember-cli-deploy-ssh-index": "^1.0.0",
-    "ember-cli-htmlbars": "4.3.0",
+    "ember-cli-htmlbars": "5.3.1",
     "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-release": "^1.0.0-beta.2",
     "ember-cli-sass": "^10.0.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.1",
-    "ember-cli-typescript": "^3.1.4",
-    "ember-data": "~3.18.0",
+    "ember-cli-typescript": "^4.1.0",
+    "ember-data": "~3.25.0",
     "ember-data-change-tracker": "^0.10.1",
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.0.2",
-    "ember-load-initializers": "^2.1.1",
+    "ember-load-initializers": "^2.1.2",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-page-title": "^6.0.3",
     "ember-prism": "^0.8.2",
-    "ember-qunit": "^4.6.0",
-    "ember-resolver": "^8.0.0",
-    "ember-source": "~3.18.0",
+    "ember-qunit": "^5.1.1",
+    "ember-resolver": "^8.0.2",
+    "ember-source": "~3.24.0",
     "ember-statecharts": "^0.10.0",
-    "ember-template-lint": "^2.6.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-ember": "^8.4.0",
+    "ember-template-lint": "^2.15.0",
+    "eslint": "^7.17.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-ember": "^10.1.1",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
-    "qunit-dom": "^1.2.0",
+    "prettier": "^2.2.1",
+    "qunit": "^2.13.0",
+    "qunit-dom": "^1.6.0",
     "sass": "^1.26.10",
     "svg-symbols": "^1.0.5",
     "tracked-built-ins": "^1.0.2",
-    "tracked-toolbox": "^1.0.1",
-    "typescript": "^3.9.5",
+    "tracked-toolbox": "^1.2.1",
+    "typescript": "^4.2.3",
     "workerpool": "6.1.0"
   },
   "engines": {
