Installing ember-drag-drop and ember-could-get-used-to-this
These two libraries will help us in landing support for images that can
be uploaded at the bottom of the page, with sorting and all those nice
things.

--- a/package.json
+++ b/package.json
@@ -62,8 +62,10 @@
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.1",
     "ember-cli-typescript": "^4.1.0",
+    "ember-could-get-used-to-this": "^1.0.1",
     "ember-data": "~3.24.0",
     "ember-data-change-tracker": "^0.10.1",
+    "ember-drag-drop": "^0.8.2",
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.0.2",
     "ember-load-initializers": "^2.1.2",
