--- a/package.json
+++ b/package.json
@@ -101,6 +101,6 @@
     "edition": "octane"
   },
   "dependencies": {
-    "@lblod/ember-vo-mu-file-upload": "^0.6.0"
+    "@lblod/ember-vo-mu-file-upload": "git://github.com/lblod/ember-vo-mu-file-upload.git#master"
   }
 }
