--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.1",
     "ember-cli-typescript": "^4.1.0",
+    "ember-concurrency": "^2.0.3",
     "ember-could-get-used-to-this": "^1.0.1",
     "ember-data": "~3.24.0",
     "ember-data-change-tracker": "^0.10.1",
@@ -74,7 +75,7 @@
     "ember-prism": "^0.8.2",
     "ember-qunit": "^5.1.1",
     "ember-resolver": "^8.0.2",
-    "ember-source": "~3.24.0",
+    "ember-source": "~3.25.1",
     "ember-statecharts": "^0.10.0",
     "ember-template-lint": "^2.15.0",
     "eslint": "^7.17.0",
