--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
     "ember-drag-drop": "^0.8.2",
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.0.2",
+    "ember-focus-trap": "^0.5.0",
+    "ember-in-element-polyfill": "^1.0.0",
     "ember-load-initializers": "^2.1.2",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-page-title": "^6.0.3",
