--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "ember-cli-terser": "^4.0.1",
     "ember-cli-typescript": "^4.1.0",
     "ember-concurrency": "^2.0.3",
+    "ember-config-helper": "^0.1.3",
     "ember-could-get-used-to-this": "^1.0.1",
     "ember-data": "~3.24.0",
     "ember-data-change-tracker": "^0.10.1",
