Prettier rendering of last changed date in overview
The last date at which an item was changed is now rendered somewhat more
nicely in the overview.

--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "edition": "octane"
   },
   "dependencies": {
-    "@lblod/ember-vo-mu-file-upload": "git://github.com/lblod/ember-vo-mu-file-upload.git#master"
+    "@lblod/ember-vo-mu-file-upload": "git://github.com/lblod/ember-vo-mu-file-upload.git#master",
+    "date-fns": "^2.25.0"
   }
 }
