--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "@lblod/ember-acmidm-login": "^1.1.1",
     "@lblod/ember-vo-mu-file-upload": "0.7.0",
     "@types/ember": "^3.16.4",
-    "@types/ember__test-helpers": "^1.7.3",
     "@types/ember-data": "^3.16.12",
     "@types/ember-data__model": "^3.16.2",
     "@types/ember-data__store": "^3.16.1",
     "@types/ember-qunit": "^3.4.13",
+    "@types/ember__test-helpers": "^1.7.3",
     "@types/qunit": "^2.9.1",
     "@types/rsvp": "^4.0.3",
     "@zestia/ember-auto-focus": "^4.1.0",
@@ -76,6 +76,7 @@
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-mu-transform-helpers": "^2.1.1",
     "ember-page-title": "^6.0.3",
+    "ember-plausible": "git+http:github.com/redpencilio/ember-plausible#2e635866ccab6269b034ab44fe542d8197db0731",
     "ember-prism": "^0.8.2",
     "ember-qunit": "^5.1.1",
     "ember-resolver": "^8.0.2",
