--- a/package.json
+++ b/package.json
@@ -32,18 +32,18 @@
     "@lblod/ember-acmidm-login": "^1.1.1",
     "@lblod/ember-vo-mu-file-upload": "0.7.0",
     "@types/ember": "^3.16.4",
+    "@types/ember__test-helpers": "^1.7.3",
     "@types/ember-data": "^3.16.12",
     "@types/ember-data__model": "^3.16.2",
     "@types/ember-data__store": "^3.16.1",
     "@types/ember-qunit": "^3.4.13",
-    "@types/ember__test-helpers": "^1.7.3",
     "@types/qunit": "^2.9.1",
     "@types/rsvp": "^4.0.3",
     "@zestia/ember-auto-focus": "^4.1.0",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "ember-async-await-helper": "^0.2.0",
-    "ember-auto-import": "^1.10.1",
+    "ember-auto-import": "^2.0.0",
     "ember-cli": "~3.24.0",
     "ember-cli-app-version": "^4.0.0",
     "ember-cli-autoprefixer": "^1.0.0",
@@ -98,6 +98,7 @@
     "tracked-built-ins": "^1.0.2",
     "tracked-toolbox": "^1.2.1",
     "typescript": "^4.2.3",
+    "webpack": "^5.77.0",
     "workerpool": "6.1.0"
   },
   "engines": {
